threading carefully #3: producer & consumer improvements