@@ -5,14 +5,12 @@ import java.util.LinkedList;
 import java.util.Map;
 
 public class Warehouse {
-  // product list?
-  public static Map<ProductType, Integer> storage;
-
   private final int MAX_ORDERS = 3;
+  private Map<ProductType, Integer> storage;
   private LinkedList<Order> orders = new LinkedList<>();
 
-  static {
-    storage = new HashMap<>(Map.ofEntries(
+  {
+    this.storage = new HashMap<>(Map.ofEntries(
       Map.entry(ProductType.KITEBOARD, 8),
       Map.entry(ProductType.LONGBOARD, 3),
       Map.entry(ProductType.PADDLEBOARD, 5),
@@ -26,22 +24,27 @@ public class Warehouse {
   public synchronized void receiveOrder(Order o) throws InterruptedException{
     // should poll or loop indefinitely, checking the size of the list
     // call wait if the list has reached max capacity
-    while(this.orders.size() > MAX_ORDERS) {
+    while(this.orders.size() >= MAX_ORDERS) {
       wait();
     }
-    var currentQuantity = storage.get(o.type());
+    var currentQuantity = this.storage.get(o.type());
 
     if (o.quantity() <= currentQuantity) {
       this.orders.addLast(o);
-      storage.put(o.type(), Integer.valueOf(currentQuantity - o.quantity()));
+      this.storage.put(o.type(), Integer.valueOf(currentQuantity - o.quantity()));
       System.out.println(
-        String.format("Order #%d placed: %d %s", o.id(), o.quantity(), o.type().toString(o.quantity()))
+        "[%s] order #%d placed: %d %s".formatted(
+          Thread.currentThread().getName(),
+          o.id(),
+          o.quantity(),
+          o.type().toString(o.quantity())
+        )
       );
       notifyAll();
     } else {
       System.out.println(
-        String.format(
-          "Can't place order: %d %s, insufficient quantity in storage: %d",
+        "[%s] can't place order: %d %s, insufficient quantity in storage: %d".formatted(
+          Thread.currentThread().getName(),
           o.quantity(),
           o.type().toString(o.quantity()),
           currentQuantity
@@ -55,7 +58,8 @@ public class Warehouse {
     while(this.orders.size() == 0) {
       wait();
     }
-    this.orders.poll();
+    Order o = this.orders.poll();
+    System.out.println("[%s] processing order %d".formatted(Thread.currentThread().getName(), o.id()));
     notifyAll();
   }
 }
